# SbleedyGonzales

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
exploits/: CC2540_connection_request_crash_truncated.yaml  DA14680_att_read_100_silent_overflow_crash.yaml  DA14680_truncated_l2cap_crash.yaml  att_read_100_silent_overflow_crash.yaml  bleedingtooth_badchoice.yaml  bleedingtooth_badchoice_cve_2020_12352.yaml  bleedingtooth_badkarma.yaml  bleedingtooth_badvibes.yaml  blueborne_cve_2017_0781.yaml  blueborne_cve_2017_0785.yaml  blueborne_cve_2017_1000251.yaml  btlejacking.yaml  connection_request_crash_truncated.yaml  custom_insecure_numeric_comparison_implementation.yaml  custom_legacy_pairing_second_check.yaml  custom_method_confusion_check.yaml  custom_method_confusion_check_classic.yaml  custom_nino_check.yaml  keystroke_injection.yaml  knob_ble.yaml  link_layer_encryption.yaml  reconnaissance_SC_supported.yaml  reconnaissance_SSP_supported.yaml  reconnaissance_possible_BLUR.yaml  sweyntooth_dhcheck_skip.yaml  sweyntooth_esp32_hci_desync.yaml  sweyntooth_invalid_channel_map.yaml  sweyntooth_invalid_connection_request.yaml  sweyntooth_invalid_l2cap_fragment.yaml  sweyntooth_key_size_overflow.yaml  sweyntooth_link_layer_length_overflow.yaml  sweyntooth_llid_deadlock.yaml  sweyntooth_public_key_crash.yaml  sweyntooth_sequential_att_deadlock.yaml  sweyntooth_silent_length_overflow.yaml  sweyntooth_truncated_l2cap.yaml  sweyntooth_zephyr_invalid_sequence.yaml  sweyntooth_zero_ltk_installation.yaml  truncated_l2cap_crash.yaml
hardware/: hci.yaml  microbit.yaml  (+1 more)
(+62 files in other folders)
